--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   				<div class="about-content"><!-- start of about-content-->
   					
-  					<h1><span>H</span>i&excl; I'm <span>D</span>eepth&jfr; Kastur&ifr;</h1>
+  					<h1><span>H</span>i! I'm <span>D</span>eepthi Kasturi</h1>
   					<h3><span>A</span> deligent and enthusiastic engineer in thirst of exploring creative and smart ways at work.</h3>
   					<p> I'm also a bibliophile, an aspiring writer and an amateur violinist &#9834; dwelling in beautiful India.<p>
 
