--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   			<a class="fb" href="https://www.facebook.com/profile.php?id=100009908206243" ></a>
   			<a class="linkedin" href="https://www.linkedin.com/in/deepthi-kasturi-5a229588/" ></a>
   			<a class="insta" href="https://www.instagram.com/deepthikasturi/?hl=en" ></a>
-  			<a class="git" href="" ></a>
+  			<a class="git" href="https://github.com/Deepthi-Bhargavi-Kasturi" ></a>
   		</footer>
 
 
